--- a/src/main/resources/com/example/projectonegames/novousuario-modal-view.fxml
+++ b/src/main/resources/com/example/projectonegames/novousuario-modal-view.fxml
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.projectonegames.NovousuarioModalView"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="600.0" prefWidth="450.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projectonegames.Controller.NovousuariomodalController">
+   <children>
+      <Label prefHeight="61.0" prefWidth="450.0" style="-fx-background-color: cd0000;" textFill="#cd0000" />
+      <Label layoutY="539.0" prefHeight="61.0" prefWidth="450.0" style="-fx-background-color: cd0000;" textFill="#cd0000" />
+      <Label layoutX="159.0" layoutY="14.0" prefHeight="41.0" prefWidth="148.0" text="Cadastro" textFill="WHITE">
+         <font>
+            <Font name="Arial Black" size="24.0" />
+         </font>
+      </Label>
+      <TextField layoutX="110.0" layoutY="247.0" prefHeight="41.0" prefWidth="231.0" promptText="Usuario" />
+      <PasswordField layoutX="110.0" layoutY="314.0" prefHeight="41.0" prefWidth="231.0" promptText="Senha" />
+      <Button layoutX="110.0" layoutY="386.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" text="Cadastrar" />
+      <Label layoutX="110.0" layoutY="222.0" prefHeight="19.0" prefWidth="116.0" text="Digite um usuario:" textFill="WHITE">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="110.0" layoutY="291.0" prefHeight="19.0" prefWidth="116.0" text="Digite um senha:" textFill="WHITE">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="218.0" layoutY="222.0" prefHeight="19.0" prefWidth="14.0" text="*" textFill="#f50000">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="211.0" layoutY="291.0" prefHeight="19.0" prefWidth="14.0" text="*" textFill="#f50000">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Button layoutX="211.0" layoutY="386.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Cancelar" />
+   </children>
 </AnchorPane>
