--- a/src/main/resources/com/example/projectonegames/maisbaixados-view.fxml
+++ b/src/main/resources/com/example/projectonegames/maisbaixados-view.fxml
@@ -5,17 +5,23 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projectonegames.Controller.MaisBaixadosController">
    <children>
-      <TableView fx:id="tabelaMaisBaixados" layoutY="44.0" prefHeight="310.0" prefWidth="601.0">
+      <TableView fx:id="tabelaMaisBaixados" layoutX="1.0" layoutY="45.0" prefHeight="310.0" prefWidth="601.0">
         <columns>
-          <TableColumn fx:id="colunaMaisbaixados" prefWidth="114.0" text="Mais baixados" />
-          <TableColumn fx:id="colunaNome" prefWidth="309.0" text="Nome" />
-            <TableColumn fx:id="colunaMaisbaixados" prefWidth="157.0" text="Categoria" />
+          <TableColumn fx:id="colunaMaisbaixados" prefWidth="139.0" text="Mais baixados" />
+          <TableColumn fx:id="colunaNome" prefWidth="284.0" text="Nome" />
+            <TableColumn fx:id="colunaCategoria" prefWidth="177.0" text="Categoria" />
         </columns>
       </TableView>
-      <Label layoutY="-1.0" prefHeight="31.0" prefWidth="601.0" style="-fx-background-color: #b20000;" textFill="#b20000" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0" />
+      <Label layoutY="-1.0" prefHeight="38.0" prefWidth="601.0" style="-fx-background-color: #b20000;" textFill="#b20000" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0" />
       <Button layoutX="529.0" layoutY="363.0" mnemonicParsing="false" onAction="#Voltar" prefHeight="25.0" prefWidth="53.0" style="-fx-background-color: #ffffff;" text="Voltar" AnchorPane.bottomAnchor="12.0" AnchorPane.rightAnchor="19.0" />
+      <Label layoutX="194.0" layoutY="5.0" prefHeight="27.0" prefWidth="216.0" text="Jogos mais baixados" textFill="WHITE">
+         <font>
+            <Font name="Arial Black" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
