--- a/src/main/resources/com/example/projectonegames/novousuario-modal-view.fxml
+++ b/src/main/resources/com/example/projectonegames/novousuario-modal-view.fxml
@@ -16,9 +16,9 @@
             <Font name="Arial Black" size="24.0" />
          </font>
       </Label>
-      <TextField layoutX="110.0" layoutY="247.0" prefHeight="41.0" prefWidth="231.0" promptText="Usuario" />
-      <PasswordField layoutX="110.0" layoutY="314.0" prefHeight="41.0" prefWidth="231.0" promptText="Senha" />
-      <Button layoutX="110.0" layoutY="386.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" text="Cadastrar" />
+      <TextField fx:id="usuariofield" layoutX="110.0" layoutY="247.0" prefHeight="41.0" prefWidth="231.0" promptText="Usuario" />
+      <PasswordField fx:id="senhafield" layoutX="110.0" layoutY="314.0" prefHeight="41.0" prefWidth="231.0" promptText="Senha" />
+      <Button layoutX="110.0" layoutY="399.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" text="Cadastrar" />
       <Label layoutX="110.0" layoutY="222.0" prefHeight="19.0" prefWidth="116.0" text="Digite um usuario:" textFill="WHITE">
          <font>
             <Font size="13.0" />
@@ -39,6 +39,7 @@
             <Font size="13.0" />
          </font>
       </Label>
-      <Button layoutX="211.0" layoutY="386.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Cancelar" />
+      <Button layoutX="211.0" layoutY="399.0" mnemonicParsing="false" onAction="#Cancelar" prefHeight="25.0" prefWidth="81.0" text="Cancelar" />
+      <Label fx:id="labeljaexiste" layoutX="110.0" layoutY="362.0" prefHeight="25.0" prefWidth="231.0" />
    </children>
 </AnchorPane>
