--- a/src/main/resources/com/example/projectonegames/valorant-view.fxml
+++ b/src/main/resources/com/example/projectonegames/valorant-view.fxml
@@ -2,10 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.web.WebView?>
 
 <AnchorPane prefHeight="600.0" prefWidth="950.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projectonegames.Controller.ValorantController">
    <children>
@@ -16,12 +15,6 @@
             <Font name="Arial Rounded MT Bold" size="14.0" />
          </font>
       </Button>
-      <TableView fx:id="tabelaValorant" layoutX="17.0" layoutY="60.0" prefHeight="481.0" prefWidth="917.0">
-        <columns>
-          <TableColumn fx:id="colunaTitulo" prefWidth="195.0" text="Titulo" />
-          <TableColumn fx:id="colunaTexto" prefWidth="548.0" text="Texto" />
-            <TableColumn fx:id="colunaData" prefWidth="173.0" text="Data" />
-        </columns>
-      </TableView>
+      <WebView layoutX="-1.0" layoutY="76.0" prefHeight="441.0" prefWidth="951.0" />
    </children>
 </AnchorPane>
