--- a/src/main/resources/com/example/projectonegames/valorant-view.fxml
+++ b/src/main/resources/com/example/projectonegames/valorant-view.fxml
@@ -2,19 +2,41 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.web.WebView?>
 
 <AnchorPane prefHeight="600.0" prefWidth="950.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projectonegames.Controller.ValorantController">
    <children>
-      <Label prefHeight="51.0" prefWidth="951.0" style="-fx-background-color: #b90000;" textFill="#c60000" />
-      <Label layoutY="549.0" prefHeight="51.0" prefWidth="951.0" style="-fx-background-color: #b90000;" textFill="#c60000" />
+      <Label prefHeight="51.0" prefWidth="952.0" style="-fx-background-color: #b90000;" textFill="#c60000" />
+      <Label layoutY="549.0" prefHeight="51.0" prefWidth="952.0" style="-fx-background-color: #b90000;" textFill="#c60000" />
       <Button layoutX="835.0" layoutY="562.0" mnemonicParsing="false" onAction="#Voltar" prefHeight="28.0" prefWidth="75.0" style="-fx-background-color: #8d8d8d;" text="Voltar">
          <font>
             <Font name="Arial Rounded MT Bold" size="14.0" />
          </font>
       </Button>
-      <WebView layoutX="-1.0" layoutY="76.0" prefHeight="441.0" prefWidth="951.0" />
+      <ScrollPane layoutY="88.0" prefHeight="436.0" prefWidth="952.0" style="-fx-background-color: #000000;">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="656.0" prefWidth="958.0">
+               <children>
+                  <Label layoutX="38.0" layoutY="14.0" prefHeight="27.0" prefWidth="190.0" text="Titulo">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="38.0" layoutY="75.0" prefHeight="216.0" prefWidth="762.0" text="Texto">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="38.0" layoutY="301.0" prefHeight="27.0" prefWidth="190.0" text="Data">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
