--- a/src/main/resources/com/example/projectonegames/novousuario-modal-view.fxml
+++ b/src/main/resources/com/example/projectonegames/novousuario-modal-view.fxml
@@ -18,7 +18,7 @@
       </Label>
       <TextField fx:id="usuariofield" layoutX="110.0" layoutY="247.0" prefHeight="41.0" prefWidth="231.0" promptText="Usuario" />
       <PasswordField fx:id="senhafield" layoutX="110.0" layoutY="314.0" prefHeight="41.0" prefWidth="231.0" promptText="Senha" />
-      <Button layoutX="110.0" layoutY="399.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" text="Cadastrar" />
+      <Button layoutX="110.0" layoutY="399.0" mnemonicParsing="false" onAction="#cadastrar" prefHeight="25.0" prefWidth="87.0" text="Cadastrar" />
       <Label layoutX="110.0" layoutY="222.0" prefHeight="19.0" prefWidth="116.0" text="Digite um usuario:" textFill="WHITE">
          <font>
             <Font size="13.0" />
