--- a/src/main/resources/com/example/projectonegames/valorant-view.fxml
+++ b/src/main/resources/com/example/projectonegames/valorant-view.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -15,28 +14,20 @@
             <Font name="Arial Rounded MT Bold" size="14.0" />
          </font>
       </Button>
-      <ScrollPane layoutY="88.0" prefHeight="436.0" prefWidth="952.0" style="-fx-background-color: #000000;">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="656.0" prefWidth="958.0">
-               <children>
-                  <Label layoutX="38.0" layoutY="14.0" prefHeight="27.0" prefWidth="190.0" text="Titulo">
-                     <font>
-                        <Font size="22.0" />
-                     </font>
-                  </Label>
-                  <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="38.0" layoutY="75.0" prefHeight="216.0" prefWidth="762.0" text="Texto">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="38.0" layoutY="301.0" prefHeight="27.0" prefWidth="190.0" text="Data">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
-        </content>
-      </ScrollPane>
+      <Label layoutX="24.0" layoutY="68.0" prefHeight="51.0" prefWidth="335.0" text="t" textFill="WHITE">
+         <font>
+            <Font name="Bell MT" size="40.0" />
+         </font>
+      </Label>
+      <Label fx:id="labelTexto" alignment="TOP_LEFT" layoutX="24.0" layoutY="152.0" prefHeight="262.0" prefWidth="897.0" text="t" textFill="WHITE">
+         <font>
+            <Font name="Bell MT" size="26.0" />
+         </font>
+      </Label>
+      <Label layoutX="24.0" layoutY="452.0" prefHeight="51.0" prefWidth="335.0" text="d" textFill="WHITE">
+         <font>
+            <Font name="Bell MT" size="24.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
