--- a/src/main/resources/com/example/projectonegames/FIFA-view.fxml
+++ b/src/main/resources/com/example/projectonegames/FIFA-view.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.web.WebView?>
 
 <AnchorPane prefHeight="600.0" prefWidth="950.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projectonegames.Controller.FIFAController">
    <children>
       <Label layoutY="-1.0" prefHeight="50.0" prefWidth="953.0" style="-fx-background-color: #c60000;" textFill="#c60000" />
       <Label layoutY="550.0" prefHeight="50.0" prefWidth="953.0" style="-fx-background-color: #c60000;" textFill="#c60000" />
-      <WebView layoutX="1.0" layoutY="84.0" prefHeight="433.0" prefWidth="952.0" />
+      <Button layoutX="845.0" layoutY="563.0" mnemonicParsing="false" onAction="#Voltar" prefHeight="23.0" prefWidth="65.0" style="-fx-background-color: #909090;" text="Voltar" />
    </children>
 </AnchorPane>
