--- a/src/main/resources/com/example/projectonegames/valorant-view.fxml
+++ b/src/main/resources/com/example/projectonegames/valorant-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -9,25 +10,43 @@
    <children>
       <Label prefHeight="51.0" prefWidth="952.0" style="-fx-background-color: #b90000;" textFill="#c60000" />
       <Label layoutY="549.0" prefHeight="51.0" prefWidth="952.0" style="-fx-background-color: #b90000;" textFill="#c60000" />
-      <Button layoutX="835.0" layoutY="562.0" mnemonicParsing="false" onAction="#Voltar" prefHeight="28.0" prefWidth="75.0" style="-fx-background-color: #8d8d8d;" text="Voltar">
+      <Button layoutX="871.0" layoutY="561.0" mnemonicParsing="false" onAction="#Voltar" prefHeight="28.0" prefWidth="73.0" style="-fx-background-color: #8d8d8d;" text="Voltar">
          <font>
             <Font name="Arial Rounded MT Bold" size="14.0" />
          </font>
       </Button>
-      <Label layoutX="24.0" layoutY="68.0" prefHeight="51.0" prefWidth="335.0" text="t" textFill="WHITE">
-         <font>
-            <Font name="Bell MT" size="40.0" />
-         </font>
-      </Label>
-      <Label fx:id="labelTexto" alignment="TOP_LEFT" layoutX="24.0" layoutY="152.0" prefHeight="262.0" prefWidth="897.0" text="fyfyfyfgyfyf" textFill="WHITE">
-         <font>
-            <Font name="Bell MT" size="26.0" />
-         </font>
-      </Label>
-      <Label layoutX="24.0" layoutY="452.0" prefHeight="51.0" prefWidth="335.0" text="d" textFill="WHITE">
-         <font>
-            <Font name="Bell MT" size="24.0" />
-         </font>
-      </Label>
+      <ScrollPane layoutX="18.0" layoutY="67.0" prefHeight="469.0" prefWidth="909.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="749.0" prefWidth="895.0">
+               <children>
+                  <Label layoutX="14.0" prefHeight="51.0" prefWidth="335.0" text="t">
+                     <font>
+                        <Font name="Bell MT" size="40.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="labelTexto" alignment="TOP_LEFT" layoutX="11.0" layoutY="51.0" prefHeight="262.0" prefWidth="874.0" text="Text">
+                     <font>
+                        <Font name="Bell MT" size="22.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="313.0" prefHeight="51.0" prefWidth="335.0" text="d">
+                     <font>
+                        <Font name="Bell MT" size="24.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="labelTexto1" alignment="TOP_LEFT" layoutX="11.0" layoutY="446.0" prefHeight="262.0" prefWidth="874.0" text="Text2">
+                     <font>
+                        <Font name="Bell MT" size="22.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="395.0" prefHeight="51.0" prefWidth="335.0" text="t">
+                     <font>
+                        <Font name="Bell MT" size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
