--- a/src/main/resources/com/example/projectonegames/valorant-view.fxml
+++ b/src/main/resources/com/example/projectonegames/valorant-view.fxml
@@ -15,33 +15,38 @@
             <Font name="Arial Rounded MT Bold" size="14.0" />
          </font>
       </Button>
-      <ScrollPane layoutX="18.0" layoutY="67.0" prefHeight="469.0" prefWidth="909.0">
+      <ScrollPane layoutX="18.0" layoutY="67.0" prefHeight="469.0" prefWidth="909.0" style="-fx-background-color: #000000;">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="749.0" prefWidth="895.0">
                <children>
-                  <Label layoutX="14.0" prefHeight="51.0" prefWidth="335.0" text="t">
+                  <Label fx:id="labelTitulo1" layoutX="15.0" prefHeight="51.0" prefWidth="865.0" text="t" textFill="RED">
                      <font>
-                        <Font name="Bell MT" size="40.0" />
+                        <Font name="Arial Narrow" size="30.0" />
                      </font>
                   </Label>
-                  <Label fx:id="labelTexto" alignment="TOP_LEFT" layoutX="11.0" layoutY="51.0" prefHeight="262.0" prefWidth="874.0" text="Text">
+                  <Label fx:id="labelTexto1" alignment="TOP_LEFT" layoutX="15.0" layoutY="51.0" prefHeight="219.0" prefWidth="874.0" text="Text">
                      <font>
-                        <Font name="Bell MT" size="22.0" />
+                        <Font name="Arial Narrow Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Label layoutX="14.0" layoutY="313.0" prefHeight="51.0" prefWidth="335.0" text="d">
+                  <Label fx:id="labelData1" layoutX="15.0" layoutY="229.0" prefHeight="28.0" prefWidth="335.0" text="d" textFill="RED">
                      <font>
-                        <Font name="Bell MT" size="24.0" />
+                        <Font name="Arial Narrow" size="20.0" />
                      </font>
                   </Label>
-                  <Label fx:id="labelTexto1" alignment="TOP_LEFT" layoutX="11.0" layoutY="446.0" prefHeight="262.0" prefWidth="874.0" text="Text2">
+                  <Label fx:id="labelTexto2" alignment="TOP_LEFT" layoutX="15.0" layoutY="340.0" prefHeight="262.0" prefWidth="874.0" text="Text2">
                      <font>
-                        <Font name="Bell MT" size="22.0" />
+                        <Font name="Arial Narrow Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Label layoutX="14.0" layoutY="395.0" prefHeight="51.0" prefWidth="335.0" text="t">
+                  <Label fx:id="labelTitulo2" layoutX="14.0" layoutY="289.0" prefHeight="51.0" prefWidth="799.0" text="t" textFill="RED">
                      <font>
-                        <Font name="Bell MT" size="40.0" />
+                        <Font name="Arial Narrow" size="30.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="labelData2" layoutX="15.0" layoutY="511.0" prefHeight="28.0" prefWidth="335.0" text="d" textFill="RED">
+                     <font>
+                        <Font name="Arial Narrow" size="20.0" />
                      </font>
                   </Label>
                </children>
