--- a/src/main/resources/com/example/projectonegames/FIFA-view.fxml
+++ b/src/main/resources/com/example/projectonegames/FIFA-view.fxml
@@ -26,35 +26,35 @@
                   </Label>
                   <Label fx:id="labelTexto1" alignment="TOP_LEFT" layoutX="13.0" layoutY="59.0" prefHeight="251.0" prefWidth="891.0" text="Texto">
                      <font>
-                        <Font size="20.0" />
+                        <Font name="Arial Rounded MT Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Label fx:id="labelAutor1" layoutX="14.0" layoutY="294.0" prefHeight="26.0" prefWidth="402.0" text="Autor" textFill="RED">
+                  <Label fx:id="labelAutor1" layoutX="14.0" layoutY="274.0" prefHeight="26.0" prefWidth="402.0" text="Autor" textFill="RED">
                      <font>
                         <Font name="Arial Narrow" size="16.0" />
                      </font>
                   </Label>
-                  <Label fx:id="labelData1" layoutX="13.0" layoutY="326.0" prefHeight="17.0" prefWidth="117.0" text="Data" textFill="RED">
+                  <Label fx:id="labelData1" layoutX="13.0" layoutY="300.0" prefHeight="17.0" prefWidth="117.0" text="Data" textFill="RED">
                      <font>
                         <Font name="Arial Narrow" size="16.0" />
                      </font>
                   </Label>
-                  <Label fx:id="labelTitulo2" layoutX="13.0" layoutY="378.0" prefHeight="50.0" prefWidth="888.0" text="Titulo" textFill="RED">
+                  <Label fx:id="labelTitulo2" layoutX="14.0" layoutY="364.0" prefHeight="50.0" prefWidth="888.0" text="Titulo" textFill="RED">
                      <font>
                         <Font name="Arial Narrow" size="30.0" />
                      </font>
                   </Label>
                   <Label fx:id="labelTexto2" alignment="TOP_LEFT" layoutX="13.0" layoutY="428.0" prefHeight="251.0" prefWidth="891.0" text="Texto">
                      <font>
-                        <Font size="20.0" />
+                        <Font name="Arial Rounded MT Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Label fx:id="labelAutor2" layoutX="14.0" layoutY="627.0" prefHeight="26.0" prefWidth="402.0" text="Autor" textFill="RED">
+                  <Label fx:id="labelAutor2" layoutX="14.0" layoutY="605.0" prefHeight="26.0" prefWidth="402.0" text="Autor" textFill="RED">
                      <font>
                         <Font name="Arial Narrow" size="16.0" />
                      </font>
                   </Label>
-                  <Label fx:id="labelData2" layoutX="13.0" layoutY="653.0" prefHeight="17.0" prefWidth="117.0" text="Data" textFill="RED">
+                  <Label fx:id="labelData2" layoutX="13.0" layoutY="631.0" prefHeight="17.0" prefWidth="117.0" text="Data" textFill="RED">
                      <font>
                         <Font name="Arial Narrow" size="16.0" />
                      </font>
