--- a/src/main/resources/com/example/projectonegames/novousuario-modal-view.fxml
+++ b/src/main/resources/com/example/projectonegames/novousuario-modal-view.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -16,30 +18,45 @@
             <Font name="Arial Black" size="24.0" />
          </font>
       </Label>
-      <TextField fx:id="usuariofield" layoutX="110.0" layoutY="247.0" prefHeight="41.0" prefWidth="231.0" promptText="Usuario" />
-      <PasswordField fx:id="senhafield" layoutX="110.0" layoutY="314.0" prefHeight="41.0" prefWidth="231.0" promptText="Senha" />
-      <Button layoutX="110.0" layoutY="399.0" mnemonicParsing="false" onAction="#cadastrar" prefHeight="25.0" prefWidth="87.0" text="Cadastrar" />
-      <Label layoutX="110.0" layoutY="222.0" prefHeight="19.0" prefWidth="116.0" text="Digite um usuario:" textFill="WHITE">
+      <TextField fx:id="usuariofield" layoutX="110.0" layoutY="294.0" prefHeight="41.0" prefWidth="231.0" promptText="Usuario" />
+      <PasswordField fx:id="senhafield" layoutX="110.0" layoutY="367.0" prefHeight="41.0" prefWidth="231.0" promptText="Senha" />
+      <Button layoutX="110.0" layoutY="433.0" mnemonicParsing="false" onAction="#cadastrar" prefHeight="25.0" prefWidth="87.0" style="-fx-background-color: #838383;" text="Cadastrar">
+         <font>
+            <Font name="Arial Narrow Bold" size="16.0" />
+         </font></Button>
+      <Label layoutX="110.0" layoutY="267.0" prefHeight="19.0" prefWidth="116.0" text="Digite um usuario:" textFill="WHITE">
          <font>
             <Font size="13.0" />
          </font>
       </Label>
-      <Label layoutX="110.0" layoutY="291.0" prefHeight="19.0" prefWidth="116.0" text="Digite um senha:" textFill="WHITE">
+      <Label layoutX="110.0" layoutY="343.0" prefHeight="19.0" prefWidth="116.0" text="Digite um senha:" textFill="WHITE">
          <font>
             <Font size="13.0" />
          </font>
       </Label>
-      <Label layoutX="218.0" layoutY="222.0" prefHeight="19.0" prefWidth="14.0" text="*" textFill="#f50000">
+      <Label layoutX="218.0" layoutY="267.0" prefHeight="19.0" prefWidth="14.0" text="*" textFill="#f50000">
          <font>
             <Font size="13.0" />
          </font>
       </Label>
-      <Label layoutX="211.0" layoutY="291.0" prefHeight="19.0" prefWidth="14.0" text="*" textFill="#f50000">
+      <Label layoutX="211.0" layoutY="343.0" prefHeight="19.0" prefWidth="14.0" text="*" textFill="#f50000">
          <font>
             <Font size="13.0" />
          </font>
       </Label>
-      <Button layoutX="211.0" layoutY="399.0" mnemonicParsing="false" onAction="#Cancelar" prefHeight="25.0" prefWidth="81.0" text="Cancelar" />
+      <Button layoutX="211.0" layoutY="433.0" mnemonicParsing="false" onAction="#Cancelar" prefHeight="25.0" prefWidth="81.0" style="-fx-background-color: #838383;" text="Cancelar">
+         <font>
+            <Font name="Arial Narrow Bold" size="16.0" />
+         </font></Button>
       <Label fx:id="labeljaexiste" layoutX="110.0" layoutY="362.0" prefHeight="25.0" prefWidth="231.0" />
+      <AnchorPane layoutX="32.0" layoutY="79.0" prefHeight="170.0" prefWidth="387.0">
+         <children>
+            <ImageView fitHeight="150.0" fitWidth="372.0" layoutX="31.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../Downloads/Captura%20de%20Tela%20(12).png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
